--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,21 +5,26 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "pdf2tree"
 version = "0.0.1"
-description = "Initialize a project with prompts, agents, and templates from the pdf2tree repository."
+description = "Convert PDF documents into a folder tree with Markdown content and extracted assets."
 readme = "README.md"
 requires-python = ">=3.11"
+dependencies = [
+  "pymupdf>=1.24.2",
+  "pymupdf4llm",
+]
 license = { file = "LICENSE" }
 authors = [
-  { name = "Astral" }
+  { name = "Ogekuri" }
 ]
-keywords = ["astral", "uv", "project", "prompts", "templates"]
+keywords = ["pdf", "markdown", "pymupdf", "extraction", "tree"]
 classifiers = [
   "Development Status :: 4 - Beta",
   "Environment :: Console",
   "Intended Audience :: Developers",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
-  "Topic :: Software Development :: Code Generators",
+  "Topic :: Text Processing",
+  "Topic :: Utilities",
 ]
 
 [project.urls]
@@ -42,7 +47,3 @@ pdf2tree = [
   "resources/templates/*.md",
   "resources/vscode/settings.json",
 ]
-
-[tool.uv.forms.pdf2tree-init]
-description = "Run the Req initialize workflow with uvx --form pdf2tree-init."
-command = "pdf2tree"
