fix(core): requirements.txt.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
+# Runtime CLI uses only the Python stdlib; the packages listed here support builds and tests.
+build>=1.0.0
+setuptools>=68.0.0
+wheel>=0.41.0
+pytest>=8.0.0
+
 # Project runtime requirements (leave empty if using venv-managed installs)
 pymupdf>=1.26.6
 pymupdf4llm
@@ -9,6 +15,3 @@ pillow
 google-genai
 pylatexenc
 matplotlib
-
-# Test / CI dependencies
-pytest
