fix(core): change shell scripts.

--- a/.g.conf
+++ b/.g.conf
@@ -18,6 +18,10 @@
       "regex": "VERSION:\\s*(\\d+\\.\\d+\\.\\d+)\\n"
     },
     {
+      "pattern": "tests.sh",
+      "regex": "VERSION:\\s*(\\d+\\.\\d+\\.\\d+)\\n"
+    },
+    {
       "pattern": "src/**/*.py",
       "regex": "__version__\\s*=\\s*[\"\\']?(\\d+\\.\\d+\\.\\d+)[\"\\']?"
     },
